update with 11 changes

--- a/note/index.html
+++ b/note/index.html
@@ -62,6 +62,33 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<span class="article-description">
+SwiftUI의 소개와 관련된 글 정리</span
+><span class="article-link-date">
+2020년 7월 2일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<span class="article-description">
+스위프트 언어에 대한 소개 및 관련된 글 정리</span
+><span class="article-link-date">
+2020년 7월 2일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
+<span class="article-description">
+SwiftUI에서 유용하게 사용되는 Property Wrapper 정리</span
+><span class="article-link-date">
+2020년 7월 2일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
 <span class="article-description">
 이 글은 자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 것에 관한 글이다</span
@@ -107,36 +134,9 @@ x86는 무엇을 의미하는가</span
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
-<span class="article-description">
-SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자</span
-><span class="article-link-date">
-2020년 7월 2일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
 <span class="article-description">
 Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자</span
-><span class="article-link-date">
-2020년 7월 2일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
-<span class="article-description">
-Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들</span
-><span class="article-link-date">
-2020년 7월 2일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
-<span class="article-description">
-SwiftUI와 관련된 글 모음</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
