--- a/note/swift.html
+++ b/note/swift.html
@@ -9,9 +9,9 @@
 <title>Swift - Seorenn Note</title>
 <meta name="twitter:title" content="Swift" />
 <meta name="og:title" content="Swift" />
-<meta name="description" content="Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들" />
-<meta name="twitter:description" content="Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들" />
-<meta name="og:description" content="Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들" />
+<meta name="description" content="스위프트 언어에 대한 소개 및 관련된 글 정리" />
+<meta name="twitter:description" content="스위프트 언어에 대한 소개 및 관련된 글 정리" />
+<meta name="og:description" content="스위프트 언어에 대한 소개 및 관련된 글 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/swift.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/swift.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -383,9 +383,18 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<span class="article-description">
+SwiftUI의 소개와 관련된 글 정리</span
+><span class="article-link-date">
+2020년 7월 2일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
 <span class="article-description">
-SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자</span
+SwiftUI에서 유용하게 사용되는 Property Wrapper 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
@@ -395,15 +404,6 @@ SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자<
 <h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
 <span class="article-description">
 Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자</span
-><span class="article-link-date">
-2020년 7월 2일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
-<span class="article-description">
-SwiftUI와 관련된 글 모음</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
