--- a/note/swiftui-property-wrappers.html
+++ b/note/swiftui-property-wrappers.html
@@ -9,9 +9,9 @@
 <title>SwiftUI Property Wrappers - Seorenn Note</title>
 <meta name="twitter:title" content="SwiftUI Property Wrappers" />
 <meta name="og:title" content="SwiftUI Property Wrappers" />
-<meta name="description" content="SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자" />
-<meta name="twitter:description" content="SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자" />
-<meta name="og:description" content="SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자" />
+<meta name="description" content="SwiftUI에서 유용하게 사용되는 Property Wrapper 정리" />
+<meta name="twitter:description" content="SwiftUI에서 유용하게 사용되는 Property Wrapper 정리" />
+<meta name="og:description" content="SwiftUI에서 유용하게 사용되는 Property Wrapper 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/swiftui-property-wrappers.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/swiftui-property-wrappers.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -75,7 +75,7 @@
 </div>
 </div>
 <p>
-<a href="swiftui.html">SwiftUI</a>에서는 Property Wrapper를 이용해서 <a href="swift.html">Swift</a> 언어로 양방향 Model 혹은 View Model 구현을 할 수 있도록 지원한다. 이런 <a href="swiftui.html">SwiftUI</a>에서 유용하게 사용되는 Property Wrapper 들을 정리해보자.
+<a href="swiftui.html">SwiftUI</a>에서는 Property Wrapper를 이용해서 <a href="swift.html">Swift</a> 언어로 양방향 Model 혹은 View Model 구현을 할 수 있도록 지원한다. 이렇게 <a href="swiftui.html">SwiftUI</a>에서 유용하게 사용되는 Property Wrapper 들을 정리해보자.
 </p>
 
 <div id="outline-container-b17bbb79" class="outline-2">
@@ -283,18 +283,18 @@ window.<span style="color: #dcaeea;">rootViewController</span> =
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <span class="article-description">
-Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들</span
+SwiftUI의 소개와 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <span class="article-description">
-SwiftUI와 관련된 글 모음</span
+스위프트 언어에 대한 소개 및 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
