--- a/note/swiftui.html
+++ b/note/swiftui.html
@@ -9,9 +9,9 @@
 <title>SwiftUI - Seorenn Note</title>
 <meta name="twitter:title" content="SwiftUI" />
 <meta name="og:title" content="SwiftUI" />
-<meta name="description" content="SwiftUI와 관련된 글 모음" />
-<meta name="twitter:description" content="SwiftUI와 관련된 글 모음" />
-<meta name="og:description" content="SwiftUI와 관련된 글 모음" />
+<meta name="description" content="SwiftUI의 소개와 관련된 글 정리" />
+<meta name="twitter:description" content="SwiftUI의 소개와 관련된 글 정리" />
+<meta name="og:description" content="SwiftUI의 소개와 관련된 글 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/swiftui.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/swiftui.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -1200,7 +1200,7 @@ with SwiftUI</a></li>
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
 <span class="article-description">
-SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자</span
+SwiftUI에서 유용하게 사용되는 Property Wrapper 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
