--- a/note/xcode.html
+++ b/note/xcode.html
@@ -106,9 +106,9 @@ Xcode는 <a href="apple.html">애플</a> 플랫폼 용 소프트웨어를 개발
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <span class="article-description">
-Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자</span
+SwiftUI의 소개와 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
@@ -117,16 +117,16 @@ Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자</span
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <span class="article-description">
-Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들</span
+스위프트 언어에 대한 소개 및 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
 <span class="article-description">
-SwiftUI와 관련된 글 모음</span
+Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
