--- a/note/apple.html
+++ b/note/apple.html
@@ -166,18 +166,18 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/apple-silicon.html">Apple Silicon</a></h2>
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <span class="article-description">
-애플 실리콘(Apple Silicon)은 무엇이고 그래서 좋은건가?</span
+스위프트 언어에 대한 소개 및 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<h2><a class="article-link-title" href="/note/apple-silicon.html">Apple Silicon</a></h2>
 <span class="article-description">
-Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들</span
+애플 실리콘(Apple Silicon)은 무엇이고 그래서 좋은건가?</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
