--- a/note/macos.html
+++ b/note/macos.html
@@ -233,18 +233,18 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <span class="article-description">
-SwiftUI에서 유용하게 사용되는 Property Wrapper 들을 정리해보자</span
+SwiftUI의 소개와 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
 <span class="article-description">
-SwiftUI와 관련된 글 모음</span
+SwiftUI에서 유용하게 사용되는 Property Wrapper 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
